--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "lint": "eslint . --fix",
     "release:basic": "pnpm -F *basic release",
-    "release:ts": "pnpm -F *typescript release",
+    "release:ts": "pnpm -F *ts release",
     "release:react": "pnpm -F *react release",
     "release:vue": "pnpm -F *vue release"
   },
