--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "lint": "eslint . --config=index.js",
-    "release": "bumpp package.json --commit --push --tag && pnpm publish --access public"
+    "release": "bumpp package.json --commit \"release @jungzl/eslint-config-ts v%s\" --push --tag \"ts/v%s\" && pnpm publish --access public"
   },
   "peerDependencies": {
     "eslint": "^8.0.0",
