--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -27,6 +27,7 @@
     "@jungzl/eslint-config-ts": "workspace:*",
     "eslint-plugin-mobx": "^0.0.9",
     "eslint-plugin-react": "^7.31.8",
-    "eslint-plugin-react-hooks": "^4.6.0"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-valtio": "^0.6.1"
   }
 }
