--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@jungzl/eslint-config-monorepo",
   "version": "0.0.0",
   "private": true,
+  "packageManager": "pnpm@8.6.9",
   "description": "jungzl's ESLint configuration monorepo",
   "author": "jungzl",
   "license": "MIT",
