--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -30,7 +30,7 @@
     "eslint-plugin-ecmascript-compat": "^3.0.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-import": "npm:eslint-plugin-i@latest",
     "eslint-plugin-jsdoc": "^46.4.4",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-jsx-a11y": "^6.7.1",
