chore: add metadata

--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -4,6 +4,15 @@
   "description": "jungzl's eslint config for react",
   "author": "jungzl",
   "license": "MIT",
+  "homepage": "https://github.com/jungzl/eslint-config/tree/main/packages/react#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jungzl/eslint-config",
+    "directory": "packages/react"
+  },
+  "bugs": {
+    "url": "https://github.com/jungzl/eslint-config/issues"
+  },
   "publishConfig": {
     "access": "public"
   },
