--- a/packages/typescript/package.json
+++ b/packages/typescript/package.json
@@ -4,6 +4,15 @@
   "description": "jungzl's ESLint configuration for TypeScript",
   "author": "jungzl",
   "license": "MIT",
+  "homepage": "https://github.com/jungzl/eslint-config/tree/main/packages/typescript#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/jungzl/eslint-config",
+    "directory": "packages/typescript"
+  },
+  "bugs": {
+    "url": "https://github.com/jungzl/eslint-config/issues"
+  },
   "publishConfig": {
     "access": "public"
   },
